# wows-discordbot

./: .dockerignore  Dockerfile  LICENSE  config.py  fly.toml  main.py  pyproject.toml  start.sh  taskfile.yml
data/: trivia.csv
lib/: auth.py  embeds.py  keep_channel_alive.py  trivia.py
lib/components/: channel_dropdown.py
lib/views/: start_keep_alive.py
