[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wows-discordbot"
version = "0.1.0"
description = "World of Warships Discord Bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "arrow>=1.3.0",
    "discord-py>=2.5.2",
    "parse>=1.20.2",
    "python-dotenv",
    "sentry-sdk>=2.24.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "debugpy>=1.8.13",
    "isort>=6.0.1",
]

[tool.setuptools]
packages = ["lib", "data"]
